# M25DE1074-M25DE1020-M25DE1015

./: .env  .gitignore  output.srt  output1.srt  output2.srt  pyproject.toml  requirements.txt  run_pipeline.sh
tests/: test_pipeline.py
